1999-02-03  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* NEWS: fix description of incronly: it won't really perform full
	backups

	* NEWS: support for ufsdump -S, incronly strategy and new chunksize
	default

	* server-src/conffile.c (init_holdingdisk_defaults, chunksize):
	default to 1Gb
	* example/amanda.conf.in: ditto
	* man/amanda.8.in: ditto

	* configure.in (amanda_cv_dump_estimate): check for support for -S
	too, and define HAVE_DUMP_ESTIMATE as the estimate switch, if any
	* client-src/sendsize.c (re_size): new regexps for Solaris ufsdump
	-S and Samba `du'.  Restrict regexp that matched Digital Unix'
	dump -E so that it doesn't match smbclient's output any more.
	Move some regexps around, and only define them if the corresponding
	dump program is available

1999-02-01  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* example/amanda.conf.in: document the behavior of relative
	exclude-list files
	* man/amanda.8.in: ditto

	* man/amanda.8.in (exclude list): the GNU tar flag is
	--exclude-from, not --exclude-list
	Reported by Tom Schutter <tom@platte.com>

	* client-src/sendbackup-gnutar.c (re_table): ignore `session request 
	to' message printed by Samba 2.0.0

1999-01-28  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* man/amanda.8.in (comprate): it is not used when there is history
 	information; useful for large disks that compress little
	Reported by job bogan <job@piquin.uchicago.edu>

	* Makefile.am: select which SUBDIRS to descend to here
	* client-src/Makefile.am: removed if WANT_CLIENT
	* tape-src/Makefile.am: removed if WANT_TAPE
	* server-src/Makefile.am: removed if WANT_SERVER
	* changer-src/Makefile.am: ditto
	* restore-src/Makefile.am: removed if WANT_RESTORE
	* recover-src/Makefile.am: removed if WANT_RECOVER
	* amplot/Makefile.am: removed if WANT_AMPLOT

1999-01-27  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* NEWS: chg-scsi ports, Samba 2.0.0 support and SECURITY API

	* configure.in (USE_AMANDAHOSTS): enable by default
	* example/config.site: ditto